# auraltune-production-module

./: .gitignore  AGENTS.md  README.md  gradle.properties  local.properties.example  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/coreline/auraltune/: AudioTrack24BitCompatibilityTest.kt  AudioTrackHiResProbeTest.kt  EndToEndAudioTest.kt  SmokeTest.kt
app/src/androidTest/java/com/coreline/auraltune/audio/: AuralTuneMediaServiceProcessingInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/coreline/auraltune/ui/: DebugSupport.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/opra/: manifest.json
app/src/main/java/com/coreline/auraltune/: AuralTuneApplication.kt  MainActivity.kt
app/src/main/java/com/coreline/auraltune/audio/: AlbumArtCache.kt  ArtworkDecoder.kt  AudioPlayerService.kt  AuralTuneAudioProcessor.kt  AuralTuneMediaService.kt  AutoEqEngineSink.kt  DeviceAutoEqManager.kt  DeviceKey.kt  MusicPlayerController.kt  PlaybackProcessingState.kt  PlaybackTelemetry.kt  SpectrumAnalyzer.kt  TestTone.kt
app/src/main/java/com/coreline/auraltune/data/: GraphicEqPreset.kt  GraphicEqPresetCatalog.kt  ParametricBand.kt  ParametricEqPreset.kt  ParametricPresetCatalog.kt  PlaybackProcessingMode.kt  PlaybackSnapshot.kt  RecentOpraProfile.kt  SettingsStore.kt  ToneEqPreset.kt  ToneEqPresetCatalog.kt
app/src/main/java/com/coreline/auraltune/di/: ServiceLocator.kt
app/src/main/java/com/coreline/auraltune/opra/: OpraEngineAdapter.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
assets/launcher-icon/: README.md
audio-engine/: build.gradle.kts  consumer-rules.pro
audio-engine/src/main/cpp/: AudioEngineJNI.cpp  AuralTuneEQEngine.cpp  AuralTuneEQEngine.h  CMakeLists.txt
audio-engine/src/main/cpp/core/: AuralTuneEQEngine.cpp  AuralTuneEQEngine.h  BiquadFilter.cpp  BiquadFilter.h  PcmConvert.h
audio-engine/src/main/cpp/core/loudness/: GainComputer.h  GainSmoother.h  IsoContours.h  KWeightingFilter.h  LoudnessCompensator.cpp  LoudnessCompensator.h  LoudnessDetector.h  LoudnessEqualizer.h  LoudnessEqualizerSettings.h
audio-engine/src/main/cpp/jni/: AudioEngineJNI.cpp
audio-engine/src/main/cpp/loudness/: IsoContours.cpp  KWeightingFilter.cpp
audio-engine/src/main/java/com/coreline/audio/: AudioEngine.kt  AudioEngineBuilder.kt  EqFilterType.kt  PcmFormat.kt
audio-engine/src/test/cpp/: AuralTuneEQEngineTest.cpp  GoldenResponseTest.cpp  LoudnessCompensatorTest.cpp  PcmConvertHostTest.cpp  RangeValidationTest.cpp  ScipyGoldenResponseTest.cpp  ScipyLfilterIRTest.cpp  SnapshotRaceTest.cpp
audio-engine/src/test/cpp/golden/: hd600_oratory1990.json
audio-engine/src/test/java/com/coreline/audio/: AudioEngineBuilderTest.kt  AudioEngineLifecycleTest.kt  AudioEngineNativeCreateFailureTest.kt  AudioEngineRangeContractTest.kt  AudioEngineUpdateRateRejectionTest.kt  PcmFormatContractTest.kt  ShadowAudioEngine.kt  ShadowAudioEngineFailingCreate.kt  ShadowAudioEngineRejectingUpdate.kt
audio-engine/src/test/python/: generate_golden.py  generate_lfilter_ir.py  pcm_convert_oracle_test.py
autoeq-data/: build.gradle.kts  consumer-rules.pro
autoeq-data/schemas/com.coreline.autoeq.db.AutoEqDatabase/: 1.json  2.json
autoeq-data/src/main/java/com/coreline/autoeq/: AutoEqApi.kt
autoeq-data/src/test/java/com/coreline/autoeq/: AutoEqApiTest.kt
autoeq-data/src/test/resources/fixtures/autoeq/: malformed-parametric-eq.txt
ci/: android.yml
dev-plan/: implement_20260617_122721.md  implement_20260622_092110.md  implement_20260622_110525.md  implement_20260623_090000.md  implement_20260624_100339.md  implement_20260626_144046.md  implement_20260629_145803.md  implement_20260629_165553.md  implement_20260630_093400.md  implement_20260630_105308.md  implement_20260630_111731.md  implement_20260701_094318.md  implement_20260701_130412.md  implement_20260701_155744.md  implement_20260701_162130.md  implement_20260702_080259.md  implement_20260702_094204.md  implement_20260702_113943.md  implement_20260702_131335.md  implement_20260702_133345.md  implement_20260702_141007.md  implement_20260702_143031.md  remaining_20260622.md  t2-os-coverage-20260624.md
docs/: auraltune-cpp-engine-api-report.html  auraltune-design-handoff.md  autoeq-headfi-user-experience-report.html  autoeq-headfi-user-reactions-csv-report.html  autoeq.md  deep-research-report.md  docx_converter.js  loudness-compensation.md  opra-commercial-license-report.docx  opra-commercial-license-report.html  opra-commercial-release-notices.md  package-lock.json  package.json  pd20_e1.xml  pd20_r1.xml  pd20_r2.xml  pd20_t1.xml  pdf_converter.js  release-audio-route-qa-matrix.md
docs/design/player/: DESIGN.md  code.html
docs/design/tunes/: code.html
gradle/: libs.versions.toml
opra-data/: build.gradle.kts  consumer-rules.pro
opra-data/schemas/com.coreline.auraltune.opra.db.OpraDatabase/: 1.json
opra-data/src/test/resources/fixtures/: sample_database_v1.jsonl
reports/: AuralTune_분석보고서_20260616.html
screenshots/design-review/: window-after-back.xml  window-autoeq-section.xml  window-autoeq.xml  window-limit-moved-current.xml  window.xml
tools/: gen_autoeq_seed.py  release_readiness.ps1
(+88 files in other folders)
